# fcalendar

./: .pylintrc  LICENSE  MANIFEST.in  README.md  README_CN.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
fcalendar/: __init__.py  cli.py  core.py
tests/: __init__.py  benchmark.json  test_benchmark.py  test_english.py
