[project]
name = "fcalendar"
version = "0.12.0"
description = "Add your description here"
readme = "README.md"
authors = [
]
requires-python = ">=3.10"
dependencies = [
    "chinesecalendar>=1.9.0",
    "lunardate>=0.2.2",
]

[project.scripts]
fcalendar = "fcalendar.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.2",
]
